# rafka-generator

./: Cargo.toml  README.md
src/: main.rs
src/http/contracts/: post_message.rs
src/http/services/: post_message.rs
src/use_cases/: log_request.rs  mod.rs
