[package]
name = "rafka_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
dotenvy = "0.15"
actix-web = "4"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
actix-web-actors = "4.1"
actix = "0.13"
actix-cors = "0.6.4"

